frontend: use position:fixed to avoid scrolling on mobile

--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -6,7 +6,7 @@ body {
   color: #d4d4d4;
   font-family: "Ubuntu", sans-serif;
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
